examples/test/testpolicy15369.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15369
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key20: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value44
          key14: value32
          key24: value16
      podSelector:
        matchLabels:
          key47: value49
